@@ -51,18 +51,6 @@ subprojects {
     test {
         useJUnitPlatform()
     }
-
-    tasks.withType(JavaCompile) {
-        options.compilerArgs += '--enable-preview'
-    }
-
-    tasks.withType(JavaExec) {
-        jvmArgs += "--enable-preview"
-    }
-
-    tasks.withType(Test) {
-        jvmArgs += "--enable-preview"
-    }
 }
 
 // task for gradle wrapper upgrade: change gradleVersion here, then run "./gradlew wrapper"
